<resources>
    <string name="app_name">Intern18Summer</string>
    <string name="beatrice_maxwell">Beatrice Maxwell</string>
    <string name="slovakia">Slovakia</string>
    <string name="posts">Posts</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="news">News</string>
    <string name="loadding">loadding</string>
    <string name="content">content</string>
    <string name="profile">Profile</string>
    <string name="todo">TODO</string>
    <string name="allowEmailFromOther">Allow email from other</string>
    <string name="emailSubscriptions">Email Subscriptions</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="apply">Apply</string>
    <string name="signupActivity">SignUpActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="loginuppercase">LOGIN</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signUp">SIGN UP</string>
    <string name="singup">Singup?</string>
    <string name="pleasecheckemailpassword">Please check your email and password</string>
    <string name="ltqc">Le Thi Quynh Chau</string>
    <string name="noLike"> 0 like</string>
    <string name="helloWorld">hello world :))</string>
    <string name="like">%s like</string>
    <string name="likes">%s likes</string>
    <string name="loadImage">Load Image</string>
    <string name="uploadImage">Upload Image</string>
    <string name="label_api_option">Option</string>
    <string name="permissionDenied">Permission Denied</string>
    <string name="downloading">Downloading</string>
    <string name="download">Download Images AsyncTask</string>
    <string name="activityFragment">Activity Fragment</string>
    <string name="view">View and ViewGroup</string>
    <string name="eventListener">Event and Listener</string>
    <string name="recyclerView">Android RecyclerView</string>
    <string name="viewPager">Android ViewPager</string>
    <string name="asyncTask">AsyncTask Thread Handler</string>
    <string name="restAPI">Rest API with Retrofit and Gson</string>
    <string name="title_chart">Sales and Expense</string>
    <string name="sale">Sale</string>
    <string name="expense">Expense</string>
    <string name="usd">$</string>
    <string name="canvas">Canvas</string>
    <string name="errorPasswordEmpty">Password can not Empty</string>
    <string name="errorUsernameEmpty">Username can not Empty</string>
    <string name="errorUsernameLength">Length username from 8 to 21</string>
    <string name="errorUsernameNoSpecialCharactersAndSpace">Username no special characters and space</string>
    <string name="errorUsernameNotBeginWithUppercaseAndDigit">Username not begin with uppercase and digit</string>
    <string name="errorPasswordRepeatChar">This password repeat characters</string>
    <string name="errorPasswordSmallestLengthIs8Char">Password smallest length is 8 char</string>
    <string name="errorPasswordNoMore2CharConsecutive">Password no more 2 char or digits consecutive</string>
    <string name="errorPasswordNotEndWithDigitOrSpecialChar">Password not end with digit or special char</string>
    <string name="errorPasswordAtLeast3UppercaseNonConsecutive">Password at least 3 uppercase non consecutive</string>
    <string name="unitTest">Unit Test</string>
    <string name="listMenu">List Issue</string>
    <string name="usernamePasswordCannotEmpty">The account and password cannot be empty</string>
    <string name="errorPasswordNotHas2SpecialCharOrDigits">Password not has 2 special characters or digits</string>
    <string name="errorUsernameNoAtMost2ConsecivitiveDigits">Username no at most 2 consecivitive digits</string>
    <string name="validUsernamePassword">valid success!!</string>
    <string name="errorUsernameLeastTwoNonConsecutiveUppercaseLetters">Username least 2 non-consecutive uppercase letters</string>
    <string name="thisFieldIsNotEmpty">This field is not empty</string>
    <string name="error">Error</string>
    <string name="listCompany">List Company</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="insert">Insert</string>
    <string name="external">EXTERNAL</string>
    <string name="internal">INTERNAL</string>
    <string name="utf8">UTF-8</string>
    <string name="saveSuccessfully">Save successfully!!</string>
    <string name="permissionCancel">Permission Cancel!!</string>
    <string name="saved">saved</string>
    <string name="fileStorage">File Storage</string>
    <string name="listEmployee">List Employee %1$s %2$s</string>
</resources>
